--- a/src/db/app.json
+++ b/src/db/app.json
@@ -206,8 +206,8 @@
   "event": [
     {
       "id": 1,
-      "date": "2020-03-31",
-      "hour": "12:30",
+      "date": "2020-04-01",
+      "hour": "20:30",
       "table": 1,
       "repeat": false,
       "duration": 4,
@@ -255,16 +255,5 @@
       "starters": ["lemonWater"]
     }
   ],
-  "booking": [
-    {
-      "id": 10,
-      "date": "2020-03-31",
-      "hour": "15:00",
-      "table": 2,
-      "repeat": false,
-      "duration": 1,
-      "ppl": 3,
-      "starters": []
-    }
-  ]
+  "booking": []
 }
